# tokenizer-attack

./: .gitignore  README.md  constants.py  dump_frequencies.py  encode_all_merged_tokens.py  encode_category_data.py  llm_tokenizer_configs.py  pyproject.toml  requirements.txt  run_inference.py  run_solver.py  search_string.py  test.py  test_encode.py  train_mixed_tokenizer.py  train_tokenizer.py  train_tokenizers.py  utils.py
notebooks/: clean_merge_list.ipynb  experimental_results.ipynb  figures.ipynb  preprocess_redpajama.ipynb  unicode_and_bytes.ipynb
preprocessing/: README.md  cc_urls.txt  delete_oscar.py  preprocess_oscar.py  process_oscar.py
script_examples/: download_rpj.sh  encode.sh  get_merge_frequencies.sh  get_merge_frequencies_llm.sh  string_search.sh  train_tokenizer.sh
scripts/: download_rpj.sh  dump_freqs.sh  dump_frequencies_for_llm_tokenizers.sh  dump_frequencies_loop.sh  jupyter.sh  process_oscar.sh  test.sh  train_mixed_tokenizer.sh  train_tokenizer.sh  train_tokenizers_loop.sh  train_tokenizers_with_wikipedia_langs.sh
tokenizer_json/llm_tokenizers/: gpt-3_tokenizer.json  mistral_tokenizer.json
